--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -19,7 +19,8 @@
   display: flex;
 
   > a,
-  > span {
+  > span,
+  > .impact-bubble {
     align-items: center;
     background-color: #fff;
     border-radius: $button-border-radius;
@@ -29,13 +30,13 @@
     letter-spacing: .03rem;
     line-height: 1rem;
     max-width: 6rem;
+    min-width: 3.5rem;
     overflow: hidden;
     padding: 6px 0;
     text-align: center;
     text-decoration: none;
     text-overflow: ellipsis;
     text-shadow: 1px 1px 0 hsla(0, 0%, 100%, .2);
-    width: 3.5rem;
 
     > abbr {
       border-bottom: 1px dotted #222;
@@ -58,6 +59,7 @@
 
   .mmiI {
     background-color: $mmiI-color;
+    border: 1px solid $border-color-lightest;
   }
   .mmiII {
     background-color: $mmiII-color;
