--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -187,6 +187,10 @@ tr {
     max-height: 1vh;
     overflow: hidden;
   }
+
+  &:not(#mapPane) {
+    padding-bottom: 1rem;
+  }
 }
 
 @media only screen
