highlight table row on click

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -121,6 +121,11 @@
         cursor: pointer;
         transition: all $hover-on-duration ease-out;
       }
+
+      &:active td {
+        background: $accent-color;
+        color: #fff;
+      }
     }
   }
 }
