--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -102,7 +102,7 @@ input[type="radio"] {
 
   + span:before {
     align-items: center;
-    background-color: $bg-color;
+    background: $bg-color;
     border: 1px solid #888;
     content: '\00a0';
     display: flex;
@@ -126,7 +126,7 @@ input[type="radio"] + span:before {
 
 input[type="checkbox"]:checked + span:before,
 input[type="radio"]:checked + span:before {
-  background-color: $accent-color;
+  background: $accent-color;
   border-color: $accent-color;
   color: #fff;
 }
