--- a/src/htdocs/css/_loaders.scss
+++ b/src/htdocs/css/_loaders.scss
@@ -12,7 +12,7 @@
 
   div {
     animation: scale 1s infinite ease-in-out;
-    background-color: $text-color;
+    background: $text-color;
     border-radius: 50%;
     height: .8em;
     left: .5em;
