--- a/src/htdocs/css/leaflet/_mousePosition.scss
+++ b/src/htdocs/css/leaflet/_mousePosition.scss
@@ -1,7 +1,7 @@
 @use '../variables' as *;
 
 .leaflet-control-mouseposition {
-  background-color: rgba(255, 255, 255, .5);
+  background: rgba(255, 255, 255, .5);
   color: $text-color;
   font-size: .75rem;
   margin: 0 0 5px 0 !important;
