--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -16,7 +16,7 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
     line-height: 1;
   }
   .leaflet-control-attribution {
-    background-color: rgba(255, 255, 255, .5);
+    background: rgba(255, 255, 255, .5);
     color: $text-color-lighter;
     max-width: 300px;
     overflow: hidden; /* Quell long attributions */
