--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -70,14 +70,15 @@ button {
   &:active,
   &:focus,
   &:hover {
-    background: $accent-color;
-    color: #fff;
-    text-shadow: $button-text-shadow;
+    background: $accent-color-lightest;
     transition: all $hover-on-duration ease-out;
   }
   &:active {
+    background: $accent-color;
     box-shadow: inset 0 3px 8px rgba(0, 0, 0, .35);
+    color: #fff;
     outline: 0;
+    text-shadow: $button-text-shadow;
   }
   &:focus {
     outline: 0;
