change name of class

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -104,7 +104,7 @@
     display: none; /* hide year column when duration is 30 days or less */
   }
 
-  .eqlist {
+  .list {
     td {
       &.depth,
       &.distance,
