--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -57,6 +57,7 @@
         text-align: right;
       }
     }
+
     th {
       &.period {
         border-bottom: 1px solid $border-color-lighter;
@@ -68,9 +69,13 @@
       &.rowlabel {
         border-bottom: 1px solid $border-color-lighter;
         border-right: 1px solid $border-color;
-        padding-right: 1rem;
+        padding-right: .75rem;
         text-align: center;
       }
+    }
+
+    tr:first-child {
+      border-bottom: 1px solid $border-color;
     }
   }
 
@@ -131,6 +136,10 @@
       position: relative;
     }
 
+    thead tr {
+      border-color: $border-color;
+    }
+
     tr {
       transition: all $hover-off-duration ease-in;
 
@@ -144,7 +153,11 @@
 
       &:active td {
         background: $accent-color;
-        color: #fff;
+        color: #fff !important;
+
+        &.mag span {
+          color: #fff !important;
+        }
       }
     }
   }
@@ -194,14 +207,249 @@
 @media only screen
 and (max-width: $breakpoint-phone-width) {
   #summaryPane {
-    td {
-      padding-left: .5rem;
-      padding-right: .5rem;
-    }
+    .list {
+      position: relative;
+      width: 100%;
 
-    .eqid,
-    .location {
-      display: none;
+      &.m0 tr.m0,
+      &.m1 tr.m1,
+      &.m2 tr.m2,
+      &.m3 tr.m3,
+      &.m4 tr.m4,
+      &.m5 tr.m5,
+      &.m6 tr.m6,
+      &.m7 tr.m7,
+      &.m8 tr.m8,
+      &.m9 tr.m9 {
+        display: block;
+      }
+
+      tr.m0,
+      tr.m1,
+      tr.m2,
+      tr.m3,
+      tr.m4,
+      tr.m5,
+      tr.m6,
+      tr.m7,
+      tr.m8,
+      tr.m9 {
+        display: none;
+      }
+
+      /* Reflow table content */
+      tbody {
+        border-top: 1px solid $border-color-lighter;
+
+        td,
+        tr {
+          display: block;
+        }
+        td {
+          line-height: 1;
+          padding: 0 .5rem;
+        }
+
+        .depth,
+        .distance {
+          color: $text-color-lighter;
+          font-size: .95rem;
+        }
+        .depth {
+          float: right;
+        }
+        .distance {
+          margin-top: -.5rem;
+          text-align: left;
+
+          span {
+            width: auto;
+          }
+        }
+        .distance:after {
+          content: ' of Mainshock';
+        }
+
+        .distance,
+        .utcTime {
+          padding: .5rem 0 .5rem 3.5rem;
+        }
+
+        .eqid,
+        .location {
+          display: none;
+        }
+
+        .mag {
+          float: left;
+          font-size: 1.15rem;
+          margin-top: .8rem;
+          text-align: center;
+
+          span {
+            color: $text-color-lighter;
+            display: block;
+            font-size: .75rem;
+            font-weight: 300;
+          }
+        }
+      }
+
+      /* Sort options menu */
+      th {
+        font-size: 1rem;
+        font-weight: 400;
+
+        abbr {
+          border-bottom: none;
+        }
+      }
+
+      thead tr {
+        border: none;
+        transition: none;
+      }
+
+      /* Unexpanded sort options select menu */
+      th {
+        display: none;
+        margin-top: -.25rem;
+        padding: 0;
+
+        &.sort-down,
+        &.sort-up { /* show current sorted-by field */
+          border-bottom: 1px solid $accent-color;
+          display: inline-block;
+
+          &:before {
+            color: $text-color-lighter;
+            content: 'Sort by: ';
+            font-size: .95rem;
+            text-transform: none;
+          }
+        }
+
+        span:before {
+          display: none; /* hide sort order arrow's hover state */
+        }
+      }
+
+      /* Expanded sort options select menu */
+      &.show-menu {
+        thead {
+          th {
+            border-bottom: none;
+            display: block;
+            margin: 0;
+            padding: .5rem 1.5rem;
+            position: relative;
+            text-align: left;
+            transition: none $hover-off-duration ease-in;
+            transition-property: background, color;
+
+            &.distance {
+              border-radius: 0 0 $button-border-radius $button-border-radius;
+            }
+
+            &.sort-down,
+            &.sort-up {
+              &:after {
+                content: '✔';
+                left: .35rem;
+                position: absolute;
+                top: .5rem;
+              }
+            }
+
+            &:before {
+              content: '';
+            }
+
+            &:hover {
+              background: $accent-color-lightest;
+              color: $text-color-darker;
+              transition: none $hover-on-duration ease-out;
+              transition-property: background, color;
+
+              span:before {
+                display: inline;
+              }
+            }
+
+            &:active {
+              background: $accent-color;
+              color: #fff;
+              transition: all $hover-on-duration ease-out;
+
+              span{
+                &:after {
+                  border-bottom-color: #ccc;
+                  border-top-color: #ccc;
+                  opacity: .4;
+                }
+
+                &:before {
+                  border-bottom-color: #fff;
+                  border-top-color: #fff;
+                  opacity: 1;
+                }
+              }
+            }
+          }
+
+          tr {
+            background: rgba(255, 255, 255, .96);
+            border: 1px solid $accent-color;
+            border-radius: $button-border-radius;
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, .25);
+            cursor: pointer;
+            left: 0;
+            padding: 0;
+            position: absolute;
+            top: -25px;
+
+            &.hover:after {
+              background: $accent-color-lightest;
+              transition: all $hover-on-duration ease-out;
+            }
+
+            &.active:after {
+              background: $accent-color;
+              color: #fff;
+              transition: all $hover-on-duration ease-out;
+            }
+
+            &:after {
+              border-radius: 50%;
+              color: $accent-color;
+              content: '×';
+              font: bold 1rem Tahoma, Verdana, sans-serif;
+              height: 23px;
+              line-height: 1.35;
+              padding: 0;
+              position: absolute;
+              right: 2px;
+              text-align: center;
+              top: 2px;
+              transition: all $hover-off-duration ease-in;
+              width: 23px;
+            }
+
+            &:before {
+              color: $text-color-lighter;
+              content: 'Sort by:';
+              display: block;
+              font: .95rem $font-family-headers;
+              padding: .25rem 0 .25rem .4rem;
+            }
+          }
+
+          .eqid,
+          .location {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
