--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -4,6 +4,7 @@
 @use 'editPane';
 @use 'features/index' as features;
 @use 'helpPane';
+@use 'icons';
 @use 'impactBubbles';
 @use 'leaflet/index' as leaflet;
 @use 'lightbox';
