remove !important declarations

--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -96,19 +96,19 @@
   }
 
   .pager-alertlevel-green {
-    background: $pager-green-color !important;
+    background: $pager-green-color;
   }
   .pager-alertlevel-orange {
-    background: $pager-orange-color !important;
+    background: $pager-orange-color;
   }
   .pager-alertlevel-pending {
     background: $pager-pending-color;
   }
   .pager-alertlevel-red {
-    background: $pager-red-color !important;
+    background: $pager-red-color;
   }
   .pager-alertlevel-yellow {
-    background: $pager-yellow-color !important;
+    background: $pager-yellow-color;
   }
 
   .roman {
