tweak/refactor eq props

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -167,7 +167,7 @@
     (also used for other (i.e. non-eq) Leaflet popups) */
 .earthquake,
 .leaflet-popup-content {
-  &.selected .distance {
+  &.mainshock .distance {
     display: none;
   }
 
