--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -3,6 +3,7 @@
 @use 'controls';
 @use 'editPane';
 @use 'features/index' as features;
+@use 'header';
 @use 'helpPane';
 @use 'icons';
 @use 'impactBubbles';
@@ -15,6 +16,7 @@
 @use 'plotsPane';
 @use 'statusBar';
 @use 'summaryPane';
+@use 'titleBar';
 @use 'tablesort/src/tablesort';
 @use 'variables' as *;
 
@@ -81,7 +83,7 @@ h3 {
 }
 h1 {
   font-size: 2.1rem;
-  margin: 0 0 1rem;
+  margin: 0;
 }
 h2 {
   font-size: 2rem;
@@ -177,7 +179,7 @@ tr {
 .pane {
   display: block;
   left: 0;
-  padding: 2.5rem 0 0;
+  padding: 6rem 0 0;
   position: absolute;
   top: 0;
   width: 100%;
