change button text and move formatting code

--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -84,6 +84,13 @@ button {
     outline: 0;
   }
 
+  &:after {
+    display: block;
+    font-size: .75rem;
+    font-weight: 400;
+    margin-top: -.15rem;
+  }
+
   &[disabled] {
     background: $bg-color;
     box-shadow: none;
