--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -4,12 +4,8 @@
   button {
     margin-top: 1rem;
 
-    &:before {
-      content: 'Download';
-      display: block;
-      font-size: 0.8rem;
-      font-weight: normal;
-      margin-bottom: -0.15rem;
+    &:after {
+      content: 'Event Summary';
     }
 
     img {
