--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -3,7 +3,7 @@
 #statusBar {
   bottom: 0;
   box-shadow: 0 -2px 12px 0 rgba(0, 0, 0, .06);
-  height: 44px;
+  height: 2.75rem;
   left: 0;
   position: fixed;
   width: 100%;
@@ -18,8 +18,8 @@
     background: rgba(255, 255, 120, .95);
     border-top: 2px solid rgb(255, 255, 0);
     display: none;
-    min-height: 44px;
-    padding: 10px 0;
+    min-height: 2.75rem;
+    padding: .625rem 0;
     position: absolute;
     text-align: center;
     text-shadow: 1px 1px 3px #fffec6;
@@ -28,7 +28,7 @@
     &.error {
       background: rgba(223, 62, 62, .92);
       border-color: rgb(195, 0, 0);
-      padding: 1px 0;
+      padding: 0;
       text-shadow: 1px 1px 3px #922c2c;
 
       h4 {
@@ -43,7 +43,7 @@
 
   h4 {
     color: $text-color;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 1;
     text-align: center;
   }
@@ -51,7 +51,7 @@
   li { /* error details */
     color: #fff;
     display: inline;
-    font-size: 14px;
+    font-size: .875rem;
     list-style: none;
     margin: 0;
     padding: 0;
