use span instead of div for loaderr

--- a/src/htdocs/css/_loaders.scss
+++ b/src/htdocs/css/_loaders.scss
@@ -10,7 +10,7 @@
     opacity: 0;
   }
 
-  div {
+  span {
     animation: scale 1s infinite ease-in-out;
     background: $text-color;
     border-radius: 50%;
