--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -16,7 +16,7 @@
   .breather { /* loader */
     width: 1.5em;
 
-    div {
+    span {
       height: .9em;
       top: -.75em;
       width: .9em;
