--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -27,8 +27,9 @@
     display: flex;
     flex-flow: row wrap;
 
-    p {
+    label {
       color: $text-color-lighter;
+      display: block;
       font-weight: 300;
       letter-spacing: .015rem;
       margin: .75rem 0 .25rem;
@@ -73,6 +74,7 @@
 
   .required {
     color: #c00;
+    font-weight: 300;
     margin-top: 1rem;
   }
 
