--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -176,6 +176,31 @@ tr {
   flex-wrap: wrap;
 }
 
+.no-mainshock {
+  #plotsPane,
+  #summaryPane {
+    height: auto;
+
+    &:not(.hide) ~ .sel-mainshock {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: center;
+      padding-top: 6.5rem;
+
+      h2 {
+        font-size: 1.75rem;
+        margin: 0 0 1rem;
+      }
+
+      p {
+        margin: 0;
+      }
+    }
+  }
+}
+
 .pane {
   display: block;
   left: 0;
@@ -193,6 +218,10 @@ tr {
   &:not(#mapPane) {
     padding-bottom: 1rem;
   }
+}
+
+.sel-mainshock {
+  display: none;
 }
 
 @media only screen
