--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -145,7 +145,7 @@ tr {
 
 .content {
   line-height: 1.6;
-  padding: 1rem;
+  padding: 1rem var(--padding-gutter);
 }
 
 .count {
@@ -187,7 +187,7 @@ tr {
       flex-direction: column;
       height: 100%;
       justify-content: center;
-      padding-top: 6.5rem;
+      padding-top: var(--padding-header);
 
       h2 {
         font-size: 1.75rem;
@@ -204,7 +204,7 @@ tr {
 .pane {
   display: block;
   left: 0;
-  padding: 6rem 0 0;
+  padding: var(--padding-header) 0 0;
   position: absolute;
   top: 0;
   width: 100%;
@@ -222,11 +222,4 @@ tr {
 
 .sel-mainshock {
   display: none;
-}
-
-@media only screen
-  and (max-width: $breakpoint-phone-width) {
-    .content {
-      padding: 1rem .5rem;
-    }
 }
