use id instead of class for <time>

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -9,7 +9,7 @@
     margin-top: 2.25rem;
   }
 
-  time.updated {
+  #updated {
     border-top: 1px solid $border-color;
     display: block;
     padding: 1rem var(--padding-gutter) 0;
