--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -10,9 +10,11 @@
   }
 
   #updated {
+    background: #f8f8f8;
     border-top: 1px solid $border-color;
     display: block;
-    padding: 1rem var(--padding-gutter) 0;
+    margin-top: 2rem;
+    padding: 1rem var(--padding-gutter);
 
     &:before {
       content: 'Updated: ';
