--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -67,6 +67,22 @@ body {
   background: $bg-color;
   color: $text-color;
   position: relative;
+
+  &.no-mainshock {
+    #plotsPane,
+    #summaryPane {
+      &:not(.hide) ~ #sel-mainshock {
+        display: flex;
+      }
+
+      #updated {
+        display: none;
+      }
+    }
+  }
+}
+main {
+  position: relative;
 }
 
 h1,
@@ -145,7 +161,25 @@ tr {
 }
 
 #sel-mainshock {
+  align-items: center;
   display: none;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  padding: var(--padding-header) 0 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+
+  h2 {
+    font-size: 1.75rem;
+    margin: 0 0 1rem;
+  }
+
+  p {
+    margin: 0;
+  }
 }
 
 .content {
@@ -181,42 +215,9 @@ tr {
   flex-wrap: wrap;
 }
 
-.no-mainshock {
-  #plotsPane,
-  #summaryPane {
-    height: auto;
-
-    &:not(.hide) ~ #sel-mainshock {
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: center;
-      padding-top: var(--padding-header);
-
-      h2 {
-        font-size: 1.75rem;
-        margin: 0 0 1rem;
-      }
-
-      p {
-        margin: 0;
-      }
-    }
-
-    #updated {
-      display: none;
-    }
-  }
-}
-
 .pane {
   display: block;
-  left: 0;
   padding: var(--padding-header) 0 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
 
   &.hide {
     display: none;
