--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -10,14 +10,28 @@ $track-h: .25rem;
 $track-w: 18rem;
 $dist: $track-w - $thumb-d;
 
-@mixin track($color1, $color2) {
-  background: linear-gradient($color1, $color1) no-repeat $color2;
-  background-size: 25% 100%;
-  border: none;
-  border-radius: 5px;
-  box-sizing: border-box;
-  height: $track-h;
-  width: $track-w;
+@mixin close() { /* Note: used externally for Leaflet's close button */
+  background: none;
+  border-radius: 50%;
+  color: $accent-color;
+  height: 23px;
+  line-height: 1.35;
+  padding: 0;
+  right: 2px;
+  top: 2px;
+  text-align: center;
+  transition: all $hover-off-duration ease-in;
+  width: 23px;
+
+  &:hover {
+    background: $accent-color-lightest;
+    transition: background $hover-on-duration ease-out;
+  }
+  &:active {
+    background: $accent-color;
+    color: $bg-color;
+    transition: all $hover-on-duration ease-out;
+  }
 }
 
 @mixin thumb() {
@@ -30,7 +44,17 @@ $dist: $track-w - $thumb-d;
   width: $thumb-d;
 }
 
-/* Buttons
+@mixin track($color1, $color2) {
+  background: linear-gradient($color1, $color1) no-repeat $color2;
+  background-size: 25% 100%;
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  height: $track-h;
+  width: $track-w;
+}
+
+/* Button els
 --------------------------------------------- */
 
 button {
