--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 @use 'variables' as *;
 
 #navBar {
@@ -54,6 +56,7 @@
     i {
       color: $accent-color;
       font-size: 20px;
+      padding: 0 8px 8px;
 
       &:after {
         border: 8px solid transparent;
@@ -62,6 +65,10 @@
         left: 10px;
         position: absolute;
         transition: border .15s ease-in;
+      }
+      &:hover:after {
+        border-bottom-color: color.scale($accent-color, $lightness: 90%);
+        transition: border $hover-on-duration ease-out;
       }
       &.selected:after {
         border-bottom-color: $accent-color;
@@ -76,7 +83,7 @@
     li {
       cursor: pointer;
       display: flex;
-      padding: 0 8px 8px;
+      padding: 0;
       position: relative;
 
       &:first-child i:after { // select icon
