--- a/src/htdocs/css/_icons.scss
+++ b/src/htdocs/css/_icons.scss
@@ -1,13 +1,13 @@
-/* Icon font created at https://fontello.com on 2021-08-05 */
+/* Icon font created at https://fontello.com on 2021-09-08 */
 
 @font-face {
   font-family: 'icons';
-  src: url('../font/icons.eot?80239803');
-  src: url('../font/icons.eot?80239803#iefix') format('embedded-opentype'),
-       url('../font/icons.woff2?80239803') format('woff2'),
-       url('../font/icons.woff?80239803') format('woff'),
-       url('../font/icons.ttf?80239803') format('truetype'),
-       url('../font/icons.svg?80239803#icons') format('svg');
+  src: url('../font/icons.eot?68966375');
+  src: url('../font/icons.eot?68966375#iefix') format('embedded-opentype'),
+       url('../font/icons.woff2?68966375') format('woff2'),
+       url('../font/icons.woff?68966375') format('woff'),
+       url('../font/icons.ttf?68966375') format('truetype'),
+       url('../font/icons.svg?68966375#icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icons';
-    src: url('../font/icons.svg?80239803#icons') format('svg');
+    src: url('../font/icons.svg?68966375#icons') format('svg');
   }
 }
 */
@@ -57,9 +57,9 @@
 }
 
 .icon-check:before { content: '\e800'; }
-.icon-select:before { content: '\e801'; }
-.icon-settings:before { content: '\e802'; }
-.icon-search:before { content: '\e803'; }
-.icon-legend:before { content: '\e804'; }
-.icon-info:before { content: '\e805'; }
+.icon-settingsBar:before { content: '\e801'; }
+.icon-searchBar:before { content: '\e802'; }
+.icon-legendBar:before { content: '\e803'; }
+.icon-selectBar:before { content: '\e804'; }
 .icon-link:before { content: '\f08e'; }
+.icon-infoBar:before { content: '\f129'; }
