--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -14,6 +14,7 @@ $font-size: 16px;
 $hover-off-duration: .25s;
 $hover-on-duration: .05s;
 
+$sidebar-duration: .25s;
 $sidebar-width: 400px;
 
 /* Colors */
