move @use 'significantEqs' to index

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -15,6 +15,7 @@
 @use 'selectBar';
 @use 'settingsBar';
 @use 'sideBar';
+@use 'significantEqs';
 @use 'statusBar';
 @use 'summaryPane';
 @use 'titleBar';
