use camelCase id value

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -6,7 +6,7 @@ body.sidebar {
     margin-right: $sidebar-width;
   }
 
-  #sel-mainshock {
+  #selMainshock {
     padding-right: $sidebar-width;
   }
 
