--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,4 +1,4 @@
-@use 'leaflet/control-bottomCenter';
+@use 'leaflet/bottomCenter';
 @use 'leaflet/mousePosition';
 @use 'leaflet/overrides';
 @use 'variables' as *;
