--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -66,7 +66,7 @@ button {
   color: $accent-color;
   cursor: pointer;
   font: 700 1.1rem $font-family-headers;
-  margin-top: 1rem;
+  margin: 1rem 0 0;
   padding: 5px 12px;
   text-align: center;
   text-transform: uppercase;
