move .hide-link to _sidebar.scss

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -72,6 +72,12 @@ body.sidebar {
     display: none;
   }
 
+  .hide-link {
+    color: $text-color;
+    cursor: text;
+    text-decoration: none;
+  }
+
   .icon-close {
     position: fixed;
     right: $sidebar-width * -1;
