--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -198,7 +198,8 @@ input[type="number"] {
     background: none !important;
   }
 
-  &:focus {
+  &:focus,
+  &.active { /* .active is for flatpickr */
     border: 1px solid $accent-color;
     box-shadow: 0 0 3px $accent-color;
   }
